--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,8 +29,16 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     
+    - uses: actions/checkout@v2
+    - run: touch ./src/main/resources/application.yml
+    - run: echo "${{env.APPLICATION}}" > ./src/main/resources/application.yml
+    - uses: actions/upload-artifact@v2
+      with:
+        name: application.yml
+        path: ./src/main/resources/application.yml
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    
+
     - name: Build with Gradle
-      run: ./gradlew clean build
+      run: ./gradlew build
