--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,7 @@ jobs:
         distribution: 'temurin'
     
     - uses: actions/checkout@v2
+    - run: mkdir -p ./src/main/resources
     - run: touch ./src/main/resources/application.yml
     - run: echo "${{env.APPLICATION}}" > ./src/main/resources/application.yml
     - uses: actions/upload-artifact@v2
