--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,8 +13,11 @@ on:
   pull_request:
     branches: [ "master" ]
 
-permissions:
-  contents: read
+env:
+  AWS_REGION: us-east-2
+  AWS_S3_BUCKET: githubactionbuild
+  AWS_CODE_DEPLOY_APPLICATION: githubaction
+  AWS_CODE_DEPLOY_GROUP: githubaction
 
 jobs:
   build:
@@ -43,3 +46,16 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
+   
+    - name: AWS credential 설정
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: ${{ env.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESSKEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRETKEY }}
+
+    - name: S3에 업로드
+      run: aws deploy push --application-name ${{ env.AWS_CODE_DEPLOY_APPLICATION }} --ignore-hidden-files --s3-location s3://$AWS_S3_BUCKET/githubactionbuild/$GITHUB_SHA.zip --source .
+    - name: EC2에 배포
+      run: aws deploy create-deployment --application-name ${{ env.AWS_CODE_DEPLOY_APPLICATION }} --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name ${{ env.AWS_CODE_DEPLOY_GROUP }} --s3-location bucket=$AWS_S3_BUCKET,key=cicdtest/$GITHUB_SHA.zip,bundleType=zip
+    
