--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,7 @@ jobs:
         name: application.yml
         path: ./src/main/resources/application.yml
 
-    - name: Grant execute permission for gradlew
+    - name: gradlew 권한 설정
       run: chmod +x gradlew
 
     - name: Build with Gradle
