--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,8 +16,8 @@ on:
 env:
   AWS_REGION: us-east-2
   AWS_S3_BUCKET: githubactionbuild
-  AWS_CODE_DEPLOY_APPLICATION: github-action
-  AWS_CODE_DEPLOY_GROUP: githubaction
+  AWS_CODE_DEPLOY_APPLICATION: githubaction
+  AWS_CODE_DEPLOY_GROUP: github-action
 
 jobs:
   build:
