github action 설정파일 수정

--- a/appspec.yml
+++ b/appspec.yml
@@ -12,9 +12,11 @@ permissions:
     group: ubuntu
 
 hooks:
-  AfterInstall:
+
+  ApplicationStop:
     - location: scripts/stop.sh
       timeout: 60
+
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 60
