--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,10 +34,11 @@ jobs:
           distribution: 'temurin'
 
       - name: application.yml 설정파일 세팅
+        uses: actions/checkout@v3
         run: |
           mkdir -p ./src/main/resources
           touch ./src/main/resources/application.yml
-          echo ${{ secrets.APPLICATION }} > ./src/main/resources/application.yml
+          echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
 
       - name: gradlew 권한 설정
         run: chmod +x gradlew
